[package]
name = "ios-deployer"
version = "0.1.0"
authors = ["Wonway Song <sww4718168@163.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
thiserror = "1"
core-foundation = "0.9"

structopt = { version = "0.3", optional = true }

[features]
default = []
bin = [ "structopt" ]
